--- a/people/tim.qmd
+++ b/people/tim.qmd
@@ -1,11 +1,49 @@
 ---
 title: "Tim Churches"
 description: "Health Data Scientist"
+author-meta: "timothy.churches@unsw.edu.au"
 image: ../images/tim.jpeg
 ---
 
-[![](../images/tim.jpeg) <a href="mailto:Tim.Churches@inghaminstitute.org.au">Tim.Churches@inghaminstitute.org.au</a>]{.aside}
+::: {.aside}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nulla facilisi etiam dignissim diam quis enim lobortis. Libero enim sed faucibus turpis in eu mi bibendum. Odio ut enim blandit volutpat. Posuere ac ut consequat semper viverra nam libero justo laoreet. Scelerisque in dictum non consectetur. Dolor sit amet consectetur adipiscing elit ut. Et ultrices neque ornare aenean euismod elementum nisi quis eleifend. Odio aenean sed adipiscing diam donec adipiscing. Eu lobortis elementum nibh tellus molestie nunc non blandit.
+![Tim Churches as he used to look, which is how he still imagines himself to look now...](../images/tim-churches.jpeg) 
 
-Velit egestas dui id ornare. Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi tristique. Mauris pharetra et ultrices neque. Mus mauris vitae ultricies leo integer malesuada nunc. Ultrices tincidunt arcu non sodales neque sodales ut etiam. Donec pretium vulputate sapien nec. At varius vel pharetra vel turpis nunc eget lorem. Pretium quam vulputate dignissim suspendisse. Lacinia at quis risus sed vulputate odio. Fusce id velit ut tortor pretium viverra. Diam ut venenatis tellus in metus vulputate eu. Ultricies mi eget mauris pharetra. Interdum consectetur libero id faucibus nisl tincidunt. Mollis nunc sed id semper risus in hendrerit gravida rutrum.
+::: {.profilepic}
+![Tim Churches as he actually looks now...](../images/tim.jpeg)
+:::
+
+Tim is the convenor and principle lecturer on the course [HDAT9800](../courses.html#hdat9800- health-data-visualisation-communication) Health Data Visualisation and Communication.<br><br> {{< fa envelope title="An envelope" >}} <a href="mailto:timothy.churches@unsw.edu.au">timothy.churches@unsw.edu.au</a>
+
+:::
+
+
+## Background
+
+Dr Tim Churches is a medically-trained epidemiologist and health data scientist with experience in public health informatics in both government and academic roles. He is a Senior Research Fellow at UNSW South Western Sydney Clinical School and the Ingham Institute for Applied Medical Research. His current interests include the use of machine learning in causal estimation, reproducible research methods and teaching health data science. He is the author of several open-source R and Python packages.
+
+
+## What publication are you most proud of?
+
+I think a paper I wrote in 2001 about a novel, column-oriented, set-theoretic framework for rapid exploratory analysis of very large datasets in real-time. At that time, memory (RAM) was limited and expensive, and disc storage was mechanical and slow. Real-time exploration of larger datasets that would not fit in memory (RAM) was not really feasible. I developed a method of pre-computing ordered inverted indices for every column in a dataset, memory-mapping stored versions of these on disc, and then using set operations on those to rapidly subset and cross-tabulate (or visualise) the data in a fraction of a second, much faster than traditional database technologies. The software was released as an open-source package. It had very little impact on anything, although it was used inside NSW Ministry of Health to examine communicable disease and emergency department public health surveillance data for some time. Nonetheless, it was a clever approach, it worked well and both the idea and its implementation (in Python and C) was developed entirely by me.
+
+Churches T. Exploratory data analysis using set operations and ordinal mapping. Comput Methods Programs Biomed. 2003 May;71(1):11-23. doi: 10.1016/s0169-2607(02)00057-3. PMID: 12725961.
+
+
+## What’s the most important take home message from your course?
+
+I designed the HDAT9800 Visualisation and Communication of Health Data course with my colleague Dr James Farrow (who is a computer scientist) with goal of equiping students with the skills requird to explore and visualise real-world data, which is often messy, complex and large. More importantly, the course is intended to give students the confidence to explore new methods and software packages (and even write their own), recognising that data science in general is a very fast-moving field, and constant curiosity and exploration of new methods is an essential part of becoming a successful data scientist. Stay curious, and set aside time each week just to play with new methods and packages! 
+
+
+## If you could go back in time, what bit of advice would you give to yourself as a student?
+
+Find a key textbook in each domain and read it cover-to-cover, possibly several times. It will stick with you for the rest of your life.
+
+
+## Who would play you in the biopic of your life?
+
+<img src="https://worldscinema.org/wp-content/uploads/2018/11/Peter-Greenaway-–-Drowning-by-Numbers-19881.jpg" width="100%">
+
+I think [Bernard Hill](https://en.wikipedia.org/wiki/Bernard_Hill), who played the lazy, shambling, reprobate but nonetheless charming coroner, Madgett, in Peter Greenaway's sublime film [_Drowning by Numbers_](https://en.wikipedia.org/wiki/Drowning_by_Numbers), could nicely play lazy, shambling, reprobate but nonetheless charming me. 
+
+
