--- a/posts/2023-04-02-bridging-the-chasm/index.qmd
+++ b/posts/2023-04-02-bridging-the-chasm/index.qmd
@@ -13,7 +13,7 @@ draft: false # setting this to `true` will prevent your post from appearing on y
 ---
 
 <div class="author-meta-content">
-{{< fa envelope title="An envelope" >}} <a href="danielleritz.shala@health.nsw.gov.au">danielleritz.shala@health.nsw.gov.au</a>
+{{< fa envelope title="An envelope" >}} <a href="mailto:danielleritz.shala@health.nsw.gov.au">danielleritz.shala@health.nsw.gov.au</a>
 </div>
 
 <div class="author-meta-content">
