--- a/index.ipynb
+++ b/index.ipynb
@@ -5,22 +5,88 @@
       "metadata": {},
       "source": [
         "---\n",
-        "title: \"Health Data Science Student Hub\"\n",
+        "title: \"\"\n",
+        "comments: false\n",
         "---"
       ],
-      "id": "4f802274"
+      "id": "ee4881fe"
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "```{html}\n",
-        "body {\n",
-        " background-image: url(images/223_UNSW_CBDRH_credit_AnnaKucera.jpg);\n",
-        "}\n",
-        "```"
+        "  <head>\n",
+        "    <!-- Bootstrap CSS -->\n",
+        "    <link href=\"https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css\" rel=\"stylesheet\" integrity=\"sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC\" crossorigin=\"anonymous\">\n",
+        "\n",
+        "\n",
+        "  </head>\n",
+        "\n",
+        "```\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "![](images/Landscape__1.Col_Pos_CBDRH.jpg)\n",
+        "\n",
+        ":::{.column-screen .bg-shape}\n",
+        "\n",
+        ":::{.column-body}\n",
+        "\n",
+        "::: {.container}\n",
+        "\n",
+        "::: {.item-1 .items}\n",
+        "\n",
+        "::: {.home-box-left}\n",
+        "\n",
+        "::: {.home-box-title}\n",
+        "Health Data Science Student Hub\n",
+        ":::\n",
+        "\n",
+        "::: {.home-box-content}\n",
+        "\\| Master of Science in Health data Science\n",
+        "\n",
+        "\\| Clinical Artificial Intelligence\n",
+        "\n",
+        "\\| Continuous Professional development\n",
+        ":::\n",
+        "\n",
+        ":::\n",
+        "\n",
+        "\n",
+        ":::\n",
+        "\n",
+        "\n",
+        "::: {.items .home-box-image}\n",
+        "\n",
+        "\n",
+        ":::\n",
+        "\n",
+        ":::\n",
+        "\n",
+        ":::\n",
+        "\n",
+        ":::\n",
+        "\n",
+        "<hr>\n",
+        "The Master of Science in Health Data Science will prepare you to find the right data, unlock hidden insights and use this information to better support clinical care, inform health policy and improve population health. This degree covers the entire pipeline from comprehension of complex health issues through to data wrangling and management, machine learning, data analytics, data modelling and data communication.  \n",
+        "\n",
+        "::::: {.column-screen-inset .flash}\n",
+        "\n",
+        "::: {.column-body .flash-content}\n",
+        "At the Centre for Big Data Research in Health (CBDRH) we aim to enhance the health and wellbeing of all, by maximising the productive use of all possible sources of health big data in medical research.\n",
+        ":::\n",
+        "\n",
+        ":::::\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "Our master’s degree, graduate diploma and graduate certificate in health data science are pioneering programs that examine data-driven solutions to complex health problems. At UNSW, we’re leading this new approach to healthcare."
       ],
-      "id": "fccbee49"
+      "id": "4a5fa5b8"
     }
   ],
   "metadata": {
