--- a/index.qmd
+++ b/index.qmd
@@ -4,8 +4,6 @@ comments: false
 ---
 
 
-
-
 ![](images/Landscape__1.Col_Pos_CBDRH.jpg)
 
 :::{.column-screen .bg-shape}
@@ -54,8 +52,31 @@ The Master of Science in Health Data Science will prepare you to find the right 
 
 ::: {.column-body .flash-content}
 At the Centre for Big Data Research in Health (CBDRH) we aim to enhance the health and wellbeing of all, by maximising the productive use of all possible sources of health big data in medical research.
+
 :::
 
 :::::
 
 Our master’s degree, graduate diploma and graduate certificate in health data science are pioneering programs that examine data-driven solutions to complex health problems. At UNSW, we’re leading this new approach to healthcare.
+
+Check out the videos below to learn more!
+
+<div class="media-scroller column-page">
+
+  <div class="media-element">
+  <iframe src="https://www.youtube.com/embed/3oCsO8wkFwQ" title="UNSW MHDS Applications Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <p class="media-title">Applications of Health Data Science</p>
+  </div>
+  
+  <div class="media-element">
+  <iframe src="https://www.youtube.com/embed/3dbcASykoZ4" title="UNSW MHDS Industry Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <p class="media-title">Industry perspectives of Health Data Science</p>
+  </div>
+  
+  <div class="media-element">
+  <iframe src="https://www.youtube.com/embed/GHERRWiHhqs" title="UNSW MHDS Student Stories" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <p class="media-title">Hear our student's stories</p>
+  </div>
+
+</div>
+
