--- a/people/mark.qmd
+++ b/people/mark.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Mark Hanly"
-description: "Lecturer"
+description: "Senior Lecturer"
 author-meta: "m.hanly@unsw.edu.au"
 image: ../images/mark.jpeg
 comments: false
@@ -12,7 +12,7 @@ comments: false
 ![](../images/mark.jpeg)
 :::
 
-Mark is a lecturer and convenor on the course [HDAT9700](../courses.html#hdat9700) statistical modelling II.<br><br> {{< fa envelope title="An envelope" >}} <a href="mailto:m.hanly@unsw.edu.au">m.hanly@unsw.edu.au</a>
+Mark is a Senior Lecturer and convenor on the course [HDAT9700](../courses.html#hdat9700) statistical modelling II.<br><br> {{< fa envelope title="An envelope" >}} <a href="mailto:m.hanly@unsw.edu.au">m.hanly@unsw.edu.au</a>
 :::
 
 ## What publication are you most proud of?
