Added Marzias profile

--- a/people/bronwyn.qmd
+++ b/people/bronwyn.qmd
@@ -3,6 +3,7 @@ title: "Bronwyn Brew Haasdyk"
 description: "Senior Research Fellow"
 image: ../images/bronwyn.jpeg
 comments: false
+draft: true
 ---
 
 ::: {.aside}
