--- a/posts/2023-10-09-what If-using-data-storytelling-to-Illustrate-health inequality-in-england/index.qmd
+++ b/posts/2023-10-09-what If-using-data-storytelling-to-Illustrate-health inequality-in-england/index.qmd
@@ -1,12 +1,12 @@
 ---
 title: "What If: Using Data Storytelling to Illustrate Health Inequality in England"
-description: "_Owen discusses how he combined story telling and data visualisation to reveal the cascading effects of socio-economic factors on health outcomes_"
+description: "_Owen discusses how he combined story-telling and interactive data visualisation to reveal the cascading effects of socio-economic factors on health outcomes_"
 author:
   - name: Owen Cho
-date: 2023-10-09
+date: 2023-10-10
 categories: [Health Data Science, Data Visualisation, Scrollytelling, Health Inequality] # self-defined categories
-image: "OC_Small.jpg"
-draft: true # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
+image: "owen-cho.png"
+draft: false # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
 ---
 
 <div style="display:grid; grid-template-columns: 1fr 1fr;">
@@ -28,9 +28,9 @@ draft: true # setting this to `true` will prevent your post from appearing on yo
 
 ::: aside
 ::: {.round-border}
-![](OC_Small.jpg)
+![](owen-cho.png)
 :::
-Add Owen's mini-bio here
+Owen Cho is a data scientist with a background in corporate strategy. He now leads the data education startup, DeepSkill. After earning his MBA from the University of Cambridge, Owen further specialised as a senior data scientist in Health Policy Analysis, conducting numerous public health data projects, including health utilisation forecasts. He emphasises the importance of balancing hard skills with soft skills for data-driven problem solving in an age flourishing with ever-evolving tools.
 :::
 
 ### Background
